[gd_scene load_steps=14 format=3 uid="uid://c65uqhkycx504"]

[ext_resource type="Script" path="res://player/player.gd" id="1_kly4h"]
[ext_resource type="Script" path="res://player/smooth_camera_arm.gd" id="2_a14m4"]
[ext_resource type="PackedScene" uid="uid://btnw4i1q6w0nr" path="res://player/health_component.tscn" id="2_c86bi"]
[ext_resource type="Script" path="res://resources/character_stats.gd" id="2_v2v1l"]
[ext_resource type="PackedScene" uid="uid://brkes6oa2ksbn" path="res://player/rig.tscn" id="3_fah68"]
[ext_resource type="PackedScene" uid="uid://ban384vkt3irv" path="res://player/dash.tscn" id="3_q5n1i"]
[ext_resource type="Script" path="res://player/attack_raycast.gd" id="4_x82k4"]
[ext_resource type="PackedScene" uid="uid://be03ygq05v3r8" path="res://player/area_attack.tscn" id="6_ti7tt"]
[ext_resource type="Script" path="res://player/interaction_cast.gd" id="8_y533a"]
[ext_resource type="PackedScene" uid="uid://b46jku7r77fry" path="res://UserInterface/user_interface.tscn" id="9_478bf"]

[sub_resource type="Resource" id="Resource_1axcj"]
script = ExtResource("2_v2v1l")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_qvtay"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_x7ovr"]

[node name="Player" type="CharacterBody3D" groups=["Player"]]
collision_layer = 5
script = ExtResource("1_kly4h")
stats = SubResource("Resource_1axcj")

[node name="HealthComponent" parent="." node_paths=PackedStringArray("body") instance=ExtResource("2_c86bi")]
body = NodePath("..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_qvtay")

[node name="SmoothCameraArm" type="SpringArm3D" parent="." node_paths=PackedStringArray("target")]
transform = Transform3D(1, 0, 0, 0, 0.906308, 0.422618, 0, -0.422618, 0.906308, 0, 0, 0)
spring_length = 4.0
script = ExtResource("2_a14m4")
target = NodePath("../HorizontalPivot/VerticalPivot")

[node name="Camera3D" type="Camera3D" parent="SmoothCameraArm"]

[node name="HorizontalPivot" type="Node3D" parent="."]

[node name="VerticalPivot" type="Node3D" parent="HorizontalPivot"]

[node name="RigPivot" type="Node3D" parent="."]

[node name="Rig" parent="RigPivot" instance=ExtResource("3_fah68")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)

[node name="Skeleton3D" parent="RigPivot/Rig/CharacterRig/GameRig" index="0"]
bones/0/position = Vector3(1.15918e-14, 0.898121, -0.0481735)
bones/2/rotation = Quaternion(-0.00116665, -0.000405136, 0.00321456, 0.999994)
bones/3/rotation = Quaternion(-0.0958727, -0.000372036, 0.00852042, 0.995357)
bones/4/rotation = Quaternion(0.276547, 1.52211e-08, 9.16173e-08, 0.961)
bones/6/rotation = Quaternion(-0.156822, -1.17734e-07, -1.86946e-08, 0.987627)
bones/7/position = Vector3(-1.47443e-08, 0.898121, -0.0481734)
bones/8/position = Vector3(-7.95811e-08, 0.898121, -0.0481735)
bones/9/position = Vector3(0.131144, 0.964325, -0.0351291)
bones/9/rotation = Quaternion(0.993075, 0.0208463, -0.030961, 0.1114)
bones/11/rotation = Quaternion(0.419765, -0.000700459, 0.000324095, 0.907632)
bones/13/rotation = Quaternion(-0.751391, 0.0118849, 0.0244031, 0.659299)
bones/15/position = Vector3(-0.131144, 0.964325, -0.0351291)
bones/15/rotation = Quaternion(0.973263, -0.00576984, 0.0273307, 0.22799)
bones/17/rotation = Quaternion(0.443804, 0.00328897, -0.00162897, 0.896116)
bones/19/rotation = Quaternion(-0.687976, -0.0281915, -0.000750122, 0.725186)
bones/21/position = Vector3(0.0251286, 1.42828, 0.042816)
bones/21/rotation = Quaternion(-0.491002, -0.258956, -0.401718, 0.728342)
bones/22/position = Vector3(0.188807, 1.46535, -0.0225706)
bones/22/rotation = Quaternion(0.0472182, -0.160098, 0.974573, -0.149487)
bones/23/rotation = Quaternion(5.15561e-08, -0.0181125, -1.12707e-08, 0.999836)
bones/24/rotation = Quaternion(0.303949, -0.0181132, -0.018665, 0.952333)
bones/46/position = Vector3(-0.0113635, 1.42828, 0.042816)
bones/46/rotation = Quaternion(-0.508067, 0.224055, 0.377928, 0.740836)
bones/47/position = Vector3(-0.168093, 1.46583, -0.0375904)
bones/47/rotation = Quaternion(-0.0701317, -0.137727, 0.97359, 0.168031)
bones/48/rotation = Quaternion(1.68732e-07, 0.0170497, 1.12625e-07, 0.999855)
bones/49/rotation = Quaternion(0.337552, 0.01705, 0.0289895, 0.940706)
bones/71/position = Vector3(0.127191, 1.34695, -0.0261874)
bones/71/rotation = Quaternion(1.94033e-08, 0.611665, 0.791117, -4.6367e-08)
bones/72/position = Vector3(-0.113426, 1.34695, -0.0261874)
bones/72/rotation = Quaternion(1.94034e-08, 0.611665, 0.791117, -4.6367e-08)

[node name="AnimationTree" parent="RigPivot/Rig" index="1"]
parameters/MoveSpace/blend_position = -1.06245

[node name="RightHandBone" parent="RigPivot/Rig" index="2"]
transform = Transform3D(-0.962343, -0.270801, -0.0237147, 0.239289, -0.88528, 0.398773, -0.128982, 0.378082, 0.916743, -0.341909, 0.985404, -0.0236174)

[node name="LeftHandBone" parent="RigPivot/Rig" index="3"]
transform = Transform3D(-0.970513, 0.239108, 0.0305214, -0.22046, -0.93168, 0.288738, 0.0974758, 0.273496, 0.956921, 0.345617, 0.972773, -0.0444401)

[node name="RayAttatchment" type="BoneAttachment3D" parent="RigPivot/Rig"]
transform = Transform3D(-0.962343, -0.270801, -0.0237147, 0.239289, -0.88528, 0.398773, -0.128982, 0.378082, 0.916743, -0.341909, 0.985404, -0.0236174)
bone_name = "DEF-hand.R"
bone_idx = 51
use_external_skeleton = true
external_skeleton = NodePath("../CharacterRig/GameRig/Skeleton3D")

[node name="AttackRaycast" type="RayCast3D" parent="RigPivot/Rig/RayAttatchment"]
unique_name_in_owner = true
transform = Transform3D(0.991329, -0.123189, -0.0457463, 0.014769, -0.241471, 0.970295, -0.130576, -0.962557, -0.237557, -0.0520863, 0.0866758, 0.00896785)
collision_mask = 8
script = ExtResource("4_x82k4")

[node name="AreaAttack" parent="RigPivot" instance=ExtResource("6_ti7tt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)
collision_mask = 8

[node name="InteractionCast" type="ShapeCast3D" parent="RigPivot" node_paths=PackedStringArray("ui")]
shape = SubResource("CapsuleShape3D_x7ovr")
target_position = Vector3(0, 0, 1)
collision_mask = 2
script = ExtResource("8_y533a")
ui = NodePath("../../UserInterface")

[node name="Dash" parent="RigPivot" node_paths=PackedStringArray("player") instance=ExtResource("3_q5n1i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.982573, 0)
player = NodePath("../..")

[node name="UserInterface" parent="." node_paths=PackedStringArray("player") instance=ExtResource("9_478bf")]
player = NodePath("..")

[connection signal="defeat" from="HealthComponent" to="." method="_on_health_component_defeat"]
[connection signal="health_changed" from="HealthComponent" to="UserInterface" method="update_health"]
[connection signal="heavy_attack" from="RigPivot/Rig" to="." method="_on_rig_heavy_attack"]

[editable path="RigPivot/Rig"]
[editable path="RigPivot/Rig/CharacterRig"]
